--- a/public/style.css
+++ b/public/style.css
@@ -3,6 +3,7 @@ body {
     height: 100vh;
     margin: 0;
     overflow: hidden;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
 
 #main-container {
@@ -12,25 +13,65 @@ body {
 }
 
 aside {
-    border: 1px solid red;
-    width: 400px;
+    border: 1px solid #000000;
+    width: 250px;
     height: 100vh; 
+
+    background-color: #919191;
+    color: #FFFFFF;
+
+    font-weight: bold;
+}
+
+ul {
+    list-style: none;
+}
+
+.dir {
+    position: relative;
+}
+
+.dir::before {
+    display: inline-block;
+    content: "^";
+    transform: rotate(var(--before-rotation, 90deg));
+    position: absolute;
+    left: -15px;
+    top: -1px;
+}
+
+.dir_open {
+    display: block;
+}
+
+.dir:hover {
+    cursor: pointer;
+    font-size: 1.1em;
+}
+
+li ~ ul {
+    margin-left: -30px;
+    display: none;
 }
 
 .getFile {
     cursor: pointer;
+}
+
+.getFile:hover {
     text-decoration: underline;
 }
 
 header {
-    border: 1px solid red;
+    background-color: #919191;
+    border: 1px solid #000000;
     padding: 10px;
 }
 
 main {
     flex-grow: 1; 
-    overflow-y: auto;
-    padding: 20px;
+    overflow-y: none;
+    padding: 0px 0px 0px 20px;
 }
 
 iframe {
