--- a/public/style.css
+++ b/public/style.css
@@ -21,6 +21,9 @@ aside {
     color: #FFFFFF;
 
     font-weight: bold;
+
+    box-shadow: 5px 0px 20px #000000;
+    z-index: 10;
 }
 
 ul {
@@ -49,6 +52,10 @@ ul {
     font-size: 1.1em;
 }
 
+li {
+    margin: 10px 0px;
+}
+
 li ~ ul {
     margin-left: -30px;
     display: none;
@@ -66,15 +73,22 @@ header {
     background-color: #919191;
     border: 1px solid #000000;
     padding: 10px;
+    box-shadow: 0px 5px 20px #000000;
+    z-index: 10;
 }
 
 main {
     flex-grow: 1; 
     overflow-y: none;
     padding: 0px 0px 0px 20px;
+    background-color: #a9a9a9;
 }
 
 iframe {
-    width: 100%;
+     background-color: #ffffff;
+     box-shadow: 0px 0px 20px #000000;
+    display: block;
+    margin: auto;
+    width: 70%;
     height: 100%;
 }
